--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!--
+ * @Author: 陈德立*******419287484@qq.com
+ * @Date: 2023-10-11 22:58:57
+ * @LastEditTime: 2023-10-12 00:28:18
+ * @LastEditors: 陈德立*******419287484@qq.com
+ * @Github: https://github.com/Alan1034
+ * @Description: 
+ * @FilePath: \note-taking-app\index.html
+ * 
+-->
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +20,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
